--- a/coptic/mattar/index.html
+++ b/coptic/mattar/index.html
@@ -717,7 +717,83 @@
     <p>Answer: c)</p>
     <p>7- In this question, you need to identify the name of the following rank of angels: <b><img src="" alt=""></b></p>
     <p>Read the following paragraph, then answer the question: <b><img src="" alt=""></b></p>
-    
+    <p>1- They are a very special high rank of angels. <b><img src="" alt=""></b></p>
+    <p>2- Their location as described is in the midst and around the Throne of the Almighty. <b><img src="" alt=""></b></p>
+    <p>3- The Coptic Church commemorates them on the 8th of the month of Hatour (the third Coptic month). <b><img src="" alt=""></b></p>
+    <p>5- They are the Chariot of the Lord. <b><img src="" alt=""></b></p>
+    <p>6- They are full of eyes in the front and back. <b><img src="" alt=""></b></p>
+    <p>7- Every one of them have six wings. <b><img src="" alt=""></b></p>
+    <p>8- They were seen by St. John as looking like the following: <b><img src="" alt=""></b></p>
+    <p>a) a lion <b><img src="" alt=""></b></p>
+    <p>b) a bull <b><img src="" alt=""></b></p>
+    <p>c) a human <b><img src="" alt=""></b></p>
+    <p>d) a flying eagle <b><img src="" alt=""></b></p>
+    <p>9- These descriptions are probably for a symbolic meaning, with various explanations by the theologians of the church, because they are angels. <b><img src="" alt=""></b></p>
+    <p>10- They incessantly keep repeating the Cherubian chant, “Holy, holy, holy is the Lord God, the Almighty, who was, and is, and is to come.” <b><img src="" alt=""></b></p>
+    <p>Choose one answer: <b><img src="" alt=""></b></p>
+    <p>a) <i>ⲛⲓ-Ⲑ̀ⲣⲟⲛⲟⲥ</i></p>
+    <p>b) <i>ⲡⲓ-Ⲇ̅ ⲛⲌⲱⲟⲛ ⲛⲀⲥⲱⲙⲁⲧⲟⲥ</i></p>
+    <p>c) <i>ⲛⲓ-Ⲙⲉⲧϭⲟⲓⲥ</i></p>
+    <p>d) <i>ⲛⲓ-Ⲁⲣⲭⲏ-Ⲁⲅⲅⲉⲗⲟⲥ</i></p>
+    <p>Answer: b)</p>
+    <p>8- The four apostolic gospels have each been assigned one of the above "animal figures", again for a symbolic meaning: <b><img src="" alt=""></b></p>
+    <p>Fill in the spaces in the following paragraph with the proper choice: a, b, c, or d: <b><img src="" alt=""></b></p>
+    <p>a) <i>ⲡⲓ-Ⲙⲟⲩⲓ̀</i></p>
+    <p>b) <i>ⲡⲓ-Ⲙⲁⲥⲓ</i></p>
+    <p>c) <i>ⲫ̀-Ⲣⲱⲙⲓ</i></p>
+    <p>d) <i>ⲡⲓ-Ⲁ̀ϧⲱⲙ ⲉⲧϩⲏⲗ</i></p>
+    <p>1- The Gospel of St. Mark was referred to by the —, probably because it starts with John the Baptist who was referred to as “A voice crying in the wilderness.”</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>2- For the Gospel of St. Luke, the — was chosen possibly because it stresses “The Christ as the hearer of our heavy load of Bondage,” and/or because the gospel starts by showing us the Zacharias priesthood offering a sacrifice for the people.</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>3- The third animal, the —, refers to the Gospel of St. Matthew because it stresses more the "Human aspect" of the Lord and/or characterizes the genealogy of the Christ from the ancestry sequence of the Virgin Mary.</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>4- As for the fourth animal, the — refers to the theologic aspect of the Lord as a dominant theme.</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>9- In the final benediction, after the eucharistic communion, the priest, at first, finishes washing the holy vessels, then takes some of this blessed water in his hands and sprinkles it up and on the altar, saying: (Fill in the space with the appropriate noun)</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>O — of this offering, flying to the high with this hymn, remember us in the Lord's presence, so he would forgive our sins.</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>Answer: <i>ⲡ-Ⲁⲅⲅⲉⲗⲟⲥ</i></p>
+    <p>The word "Lord" in Coptic is one of the following words. As you know, it is one of the most common words used. However, we use 2 words for this meaning in our Coptic liturgy: One is derived from Coptic and the other is of Greek origin.</p>
+    <p>The same thing applies for the word "God". See if you can distinguish the difference in the following exercise:</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>Replace the underlined word with the appropriate word or words that are cited in the beginning:</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>a) <i>ⲡ-Ϭⲟⲓⲥ</i></p>
+    <p>b) <i>ⲫ̀-Ⲛⲟⲩϯ</i></p>
+    <p>c) <i>Ⲕⲩⲣⲓⲉ̀</i></p>
+    <p>d) <i>Ⲑⲉⲟⲥ</i></p>
+    <p>1- <u>Lord</u> have mercy <b><img src="" alt=""></b></p>
+    <p>2- <u>God</u> have mercy <b><img src="" alt=""></b></p>
+    <p>Answers: 1- a) &amp; c) 2- b) &amp; d)</p>
+    <p>The following are the characteristics of very special heavenly beings. Try to decide which of the following choices would match.</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>1- They are different than the angels. <b><img src="" alt=""></b></p>
+    <p>2- They sit around the Throne in a circle. <b><img src="" alt=""></b></p>
+    <p>3- Their number is 24. <b><img src="" alt=""></b></p>
+    <p>4- They are dressed in white robes. <b><img src="" alt=""></b></p>
+    <p>5- They have golden crowns on their heads. <b><img src="" alt=""></b></p>
+    <p>6- They hold in their hands golden bowls, full of incense, which are the prayers of the saints. <b><img src="" alt=""></b></p>
+    <p>7- It is inferred that Christ sacrificed his blood for them. <b><img src="" alt=""></b></p>
+    <p>The answers will be: <b><img src="" alt=""></b></p>
+    <p>a) <i>ⲡⲓ-Ⲑ̀ⲣⲟⲛⲟⲥ</i></p>
+    <p>b) <i>ⲡⲓ-Ϫⲟⲩⲧ Ϥ̀ⲧⲟⲩ ⲙ̀Ⲡⲣⲉⲥⲃⲩⲧⲉⲣⲟⲥ</i></p>
+    <p>c) <i>ⲛⲓ-Ⲥⲉⲣⲁⲫⲓⲙ</i></p>
+    <p>d) <i>ⲛⲓ-Ⲉⲍⲟⲩⲥⲓⲁ</i></p>
+    <p>Answer: b)</p>
+    <p>Saint Paul (the Apostle) appointed Timothy, his disciple, and Titus on both Ephesus and Crete respectively, for a priestly rank. Which of the following ranks were they appointed?</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>1- <i>ⲡⲓ-Ⲟⲩⲏⲃ (ⲡⲓ-Ⲡⲣⲉⲥⲃⲉⲧⲉⲣⲟⲩⲥ)</i></p>
+    <p>2- <i>ⲡⲓ-Ⲉⲡⲓⲥⲕⲟⲡⲟⲥ</i></p>
+    <p>3- <i>ⲡⲓ-Ⲇⲓⲁⲕⲱⲛ</i></p>
+    <p>Answer: 2-</p>
+    <p>What building that you know of and mentioned here represents to you the union between the divine and the human, the heavenly and the earthly?</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>1- <i>ⲡⲓ-Ⲡⲏⲓ</i></p>
+    <p>2- <i>ⲡⲓ-Ⲙⲟⲛⲁⲥⲧⲏⲣⲓⲟⲛ</i></p>
+    <p>3- <i>ϯ-Ⲉⲕⲕ̀ⲗⲏⲥⲓⲁ</i></p>
+    <p>Answer: 3-</p>
 </div>
 <div id="after">
   <h2 class="half">After:</h2>
