--- a/coptic/mattar/index.html
+++ b/coptic/mattar/index.html
@@ -227,10 +227,10 @@
     <p><i>ⲟ-Ⲩⲓⲟⲩ</i> [ee-yoo - <b><img src="https://i.imgur.com/Psle1tw.png" alt=""></b>]</p>
     <p><i>ⲟ-Ⲩⲓⲱ</i> [ee-yaw - <b><img src="https://i.imgur.com/rH6pg0f.png" alt=""></b>]</p>
     <p>The Holy Spirit: <b><img src="https://i.imgur.com/x3q2uZI.png" alt=""></b></p>
-    <p><i></i> [<b><img src="" alt=""></b>]</p>
-    <p><i></i> [<b><img src="" alt=""></b>]</p>
-    <p><i></i> [<b><img src="" alt=""></b>]</p>
-    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i>ⲡⲓ-Ⲡⲛⲉⲩⲙⲁ Ⲉⲑⲟⲩⲁⲃ</i> [ep-nev-ma eth-oo-ab - <b><img src="https://i.imgur.com/TYXr8J0.png" alt=""></b>]</p>
+    <p><i>Ⲧⲟ- ⲁⲅⲓⲱ Ⲡⲛⲉⲩⲙⲁⲧⲓ</i> [ag-yoo means "holy": ep-nev-mat-ee <b><img src="https://i.imgur.com/PdXfzwn.png" alt=""></b>]</p>
+    <p><i>Ⲧⲟ- ⲁⲅⲓⲱ Ⲡⲛⲉⲩⲙⲁ</i> [<b><img src="" alt=""></b>]</p>
+    <p><i>Ⲧⲟ- ⲁⲅⲓⲱ Ⲡⲛⲉⲩⲙⲁⲧⲟⲥ</i> [ep-nev-matos - <b><img src="https://i.imgur.com/ZrAhtBi.png" alt=""></b>]</p>
     <p>God: <b><img src="" alt=""></b></p>
     <p><i></i> [<b><img src="" alt=""></b>]</p>
     <p><i></i> [<b><img src="" alt=""></b>]</p>
