--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -223,13 +223,260 @@
 						<li>Verbe.
 							<ul>
 								<li>Chap. X. Des verbes en eux-mêmes. <span>83</span>
-									
+									<ol>
+										<li>Formes des verbes. <span>83–87</span>
+											<ol>
+												<li>Infinitif. <span>83</span></li>
+												<li>Qualificatif. <span>86</span></li>
+											</ol>
+										</li>
+										<li>Classification des verbes. <span>87–100</span>
+											<ol>
+												<li>Verbes simples. <span>87–96</span>
+													<ol>
+														<li>Verbes de 2 radicales. <span>88</span></li>
+														<li>Verbes à seconde radicale géminée. <span>90</span></li>
+														<li>Verbes de 3 radicales. <span>90</span></li>
+														<li>Verbes à 3<sup>e</sup> radicale faible. <span>93</span></li>
+														<li>Verbes de 4 et de 5 radicales. <span>94</span></li>
+														<li>Verbes à 3<sup>e</sup> radicale géminée et à 4<sup>e</sup> faible. <span>95</span></li>
+													</ol>
+												</li>
+												<li>Verbes causatifs. <span>96–99</span>
+													<ol>
+														<li>Formés de <em>ⲥ</em>. <span>96</span></li>
+														<li>Formés de <em>ⲧ</em>. <span>97</span></li>
+													</ol>
+												</li>
+												<li>Verbes composés. <span>99–101</span>
+													<ol>
+														<li>de <em>ⲉⲣ</em>. <span>99</span></li>
+														<li>de <em>ϯ</em>. <span>100</span></li>
+														<li>d'autres verbes. <span>100</span></li>
+													</ol>
+												</li>
+											</ol>
+										</li>
+									</ol>
+								</li>
+								<li>Chap. XI. Conjugaison du verbe. <span>101–144</span>
+									<ol>
+										<li>Tableau synoptique de la conjugaison. <span>102–105</span></li>
+										<li>Syntaxe et explications. <span>105–144</span>
+											<ol>
+												<li>Les auxiliaires. <span>105</span></li>
+												<li>Indicatif. <span>107</span>
+													<ol>
+														<li>Présent. <span>107–112</span>
+															<ul>
+																<li>Premier présent. <span>107</span></li>
+																<li>Second présent. <span>108</span></li>
+																<li>Troisième présent. <span>108</span></li>
+																<li>Présent d'habitude. <span>109</span></li>
+															</ul>
+														</li>
+														<li>Futur. <span>110–112</span></li>
+														<li>Imparfait. <span>112</span></li>
+														<li>Parfait. <span>113–116</span>
+															<ul>
+																<li>Premier parfait. <span>113</span></li>
+																<li>Deuxième parfait. <span>114</span></li>
+															</ul>
+														</li>
+														<li>Temps composés. <span>116–117</span>
+															<ol>
+																<li>Avec <em>ⲛⲉ</em>. <span>116</span></li>
+																<li>Avec <em>ⲉ</em>. <span>116</span></li>
+															</ol>
+														</li>
+													</ol>
+												</li>
+												<li>Subjonctif. <span>117–121</span></li>
+												<li>Optatif. <span>121</span></li>
+												<li>Impératif. <span>122</span></li>
+												<li>Infinitif. <span>123–129</span>
+													<ol>
+														<li>Formes. <span>123</span></li>
+														<li>Emploi de l'infinitif. <span>125</span>
+															<ul>
+																<li>Infinitif sujet. <span>125</span></li>
+																<li>Infinitif complément. <span>126</span></li>
+															</ul>
+														</li>
+													</ol>
+												</li>
+												<li>Substantif verbal. <span>129–135</span>
+													<ol>
+														<li>Formation. <span>129</span></li>
+														<li>Syntaxe. <span>130</span>
+															<ol>
+																<li>Substantif verbal avec la forme de l'infinitif simple. <span>130</span></li>
+																<li>Substantif verbal avec <em>ϫⲓⲛ</em>. <span>130–132</span></li>
+															</ol>
+														</li>
+													</ol>
+												</li>
+												<li>Passif du verbe. <span>135</span></li>
+												<li>Complément direct du verbe. <span>136–144</span>
+													<ol>
+														<li>A l'état absolu. <span>136</span></li>
+														<li>A l'état construit. <span>137</span></li>
+														<li>A l'état pronominal. <span>138</span></li>
+														<li>Verbes employés dans le sens réfléchi. <span>141</span>
+															<ol>
+																<li>Verbes transitifs. <span>141</span></li>
+																<li>Verbes intransitifs. <span>142</span></li>
+															</ol>
+														</li>
+														<li>Remarques sur quelques verbes. <span>142</span></li>
+													</ol>
+												</li>
+											</ol>
+										</li>
+									</ol>
+								</li>
+								<li>Chap. XII. Ancienne conjugaison. <span>144–155</span>
+									<ol>
+										<li>Les quatre verbes adjectifs. <span>145</span>
+											<ol>
+												<li>Conjugaison. <span>146</span></li>
+												<li>Relatifs et participes. <span>148</span></li>
+											</ol>
+										</li>
+										<li>Verbes personnels <em>ⲡⲉϫⲉ</em>, <em>ⲉϩⲛⲉ</em>. <span>149</span></li>
+										<li>Verbes impersonnels. <span>150–155</span>
+											<ol>
+												<li><em>ⲟⲩⲟⲛ</em>, <em>ⲙ̀ⲙⲟⲛ</em>. <span>150</span></li>
+												<li><em>ⲟⲩⲉⲧ</em>, <em>ⲥϣⲉ</em>. <span>154</span></li>
+											</ol>
+										</li>
+									</ol>
+								</li>
+							</ul>
+						</li>
+						<li>Particules.
+							<ul>
+								<li>Chap. XIII. Prépositions. <span>155–163</span>
+									<ol>
+										<li>Prépositions simples. <span>155</span></li>
+										<li>Prépositions composées. <span>161</span></li>
+										<li>Prépositions grecques. <span>163</span></li>
+									</ol>
+								</li>
+								<li>Chap. XIV. Adverbes. <span>164–166</span>
+									<ol>
+										<li>De temps et de lieu. <span>164</span></li>
+										<li>De manière. <span>164</span></li>
+										<li>De situation. <span>163–165</span></li>
+									</ol>
+								</li>
+								<li>Chap. XV. Conjonctions. <span>167–172</span></li>
+							</ul>
+						</li>
+						<li>Des propositions.
+							<ul>
+								<li>Chap. XVI. Proposition verbale. <span>172–177</span>
+									<ol>
+										<li>Ordre des éléments. <span>172</span></li>
+										<li>Prolepse. <span>173</span>
+											<ol>
+												<li>Sans particule. <span>174</span></li>
+												<li>Avec particules. <span>176</span></li>
+											</ol>
+										</li>
+										<li>Accord des éléments. <span>177</span></li>
+									</ol>
+								</li>
+								<li>Chap. XVII. Proposition nominale. <span>178–184</span>
+									<ol>
+										<li>Proposition nominale simple. <span>178</span></li>
+										<li>Proposition nominale avec <em>ⲡⲉ</em>, <em>ⲧⲉ</em>, <em>ⲛⲉ</em>. <span>179</span></li>
+										<li>Proposition nominale avec <em>ⲉ</em>. <span>184</span></li>
+										<li>Proposition nominale négative. <span>184</span></li>
+									</ol>
+								</li>
+								<li>Chap. XVIII. Union des propositions entr'elles. <span>185–187</span></li>
+								<li>Chap. XIX. Proposition interrogative. <span>187–190</span>
+									<ol>
+										<li>Par le ton de la voix. <span>187</span></li>
+										<li>Au moyen d'adverbes. <span>187</span></li>
+										<li>Double interrogation. <span>189</span></li>
+										<li>Interrogation indirecte. <span>190</span></li>
+									</ol>
+								</li>
+								<li>Chap. XX. Proposition relative. <span>191–196</span>
+									<ol>
+										<li>Indicatif présent. <span>192</span></li>
+										<li>Futur. <span>193</span></li>
+										<li>Parfait. <span>194</span></li>
+										<li>Imparfait. <span>195</span></li>
+										<li>Proposition relative négative. <span>195</span></li>
+									</ol>
+								</li>
+								<li>Chap. XXI. Proposition conditionnelle. <span>196–200</span>
+									<ol>
+										<li>Sans conjonction. <span>197</span></li>
+										<li>Avec <em>ϣⲁⲛ</em>. <span>198</span></li>
+										<li>Avec <em>ⲉϣⲱⲡ</em>. <span>198</span></li>
+										<li>Avec <em>ⲉϣⲱⲡ</em> et <em>ϣⲁⲛ</em>. <span>199</span></li>
+										<li>Avec <em>ⲓⲥϫⲉ</em>. <span>199</span></li>
+									</ol>
+								</li>
+								<li>Chap. XXII. Proposition temporelle. <span>200–203</span>
+									<ol>
+										<li>Sans conjonction. <span>200</span></li>
+										<li>Avec <em>ⲓⲥϫⲉⲛ</em>. <span>201</span></li>
+										<li>Avec des conjonctions grecques. <span>202</span></li>
+									</ol>
 								</li>
 							</ul>
 						</li>
 					</ol>
 				</li>
 			</ol>
+			<ul>
+				<li>Tableau des Verbes. <span>204–223</span></li>
+				<li>Liste des abréviations. <span>224</span></li>
+				<li>Chiffres cursifs.</li>
+				<li>Abrégé de la grammaire ṣaꜥìdique. <span>225–236</span></li>
+				<li>Petit exercice. <span>237–243</span></li>
+				<li>Bibliographie.</li>
+				<li>Chrestomathie.</li>
+				<li>Vocabulaire ṣaꜥìdique.</li>
+				<li>Vocabulaire boḥairique.</li>
+				<li>Liste des textes.</li>
+			</ul>
+			<h2>Abréviations Conventionnelles.</h2>
+			<ul>
+				<li><span>AB.</span> Ausgewählte Bemerkungen über den bohairischen Dialect im Pentateuch koptisch. (Bibliographie VI).</li>
+				<li><span>AC.</span> The Apostolical Constitutions or canons of the Apostels in coptic. (Bibl. VII).</li>
+				<li><span>AM.</span> Actes des martyrs, <i>Hyvernat</i>. (Bibl. XI).</li>
+				<li><span>Br.</span> Bréviaire copte, <i>Tuki</i>. (Bibl. VII).</li>
+				<li><span>C.</span> Catenæ in Evangelia, <i>P. de Lagarde</i>. (Bibl. V).</li>
+				<li><span>D.</span> Vie et récits de l'abbé Daniel, <i>Guidi</i>. (Bibl. XI).</li>
+				<li><span>EM.</span> S. Michael the Archangel, <i>Budge</i>. (Bibl. XI).</li>
+				<li><span>Fr. R.</span> <i>Francesco Rossi</i>, Cinque Manoscritti. (Bibl. VI, 4).</li>
+				<li><span>G.</span> The martyrdom and miracles of S. George of Cappadocia, <i>Budge</i>. (Bibl. XI).</li>
+				<li><span>HM.</span> Histoire des monastères de la Basse-Égypte, <i>Amélineau</i>. (Bibl. XI).</li>
+				<li><span>Isaac.</span> Histoire du Patriarche Isaac, <i>Amélineau</i>. (Bibl. XI).</li>
+				<li><span>IT.</span> The martyrdom of Isaac of Tiphre, <i>Budge</i>. (Bibl.XI).</li>
+				<li><span>Kef.</span> Un Évêque de Keft au VII<sup>e</sup> siècle, <i>Amélineau</i>. (Bibl. XI).</li>
+				<li><span>Lam.</span> Lamentations de Jérémie, <i>Tattam</i>.</li>
+				<li><span>MS.</span> Mémoires présentés par divers Savants à l'Académie des Inscriptions et Belles-Lettres, 1<sup>re</sup> série, VIII, 2<sup>e</sup> partie. Mémoire sur les Blemmyes par <i>Revillout</i>.</li>
+				<li><span>Ord.</span> Ordinal, <i>Tuki</i>. (Bibl. VII).</li>
+				<li><span>Rit.</span> Rituel, <i>Tuki</i>. (Bibl. VII).</li>
+				<li><span>Test.</span> Il testo copto del Testamento di Abramo, etc. <i>Guidi</i>. (Bibl. XI).</li>
+				<li><span>Th. Théot.</span> Théotokies, <i>Tuki</i>. (Bibl. VII).</li>
+				<li><span>Z.</span> <i>Zoega</i>, Catalogue. (Bibl. IV).</li>
+				<li><span>ZDPV.</span> Zeitschrift des deutchen Palestina Verein.</li>
+			</ul>
+			<p>Les autres abréviations sont suffisamment connues.</p>
+			<hr>
+			<h2>Grammaire.</h2>
+			<h2>Introduction.</h2>
+			<hr>
+			<h2>La Langue Copte.</h2>
+			<p><b>I. Origine.</b> La langue copte n'est autre que la langue égyptienne dans sa dernière période.</p>
 		</div>
 	</body>
 </html>
