--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -515,6 +515,149 @@
 			<p><em>ⲡⲓ-ⲁⲅⲓⲟⲥ</em> «le saint», <em>ⲛⲓ-ⲁⲅⲓⲟⲥ</em> «les saints», <em>ⲛⲉϥ-ⲁⲅⲓⲟⲥ</em> «ses saints».</p>
 			<p>Il y a aussi en copte quelques rares mots latins qui sont invariables: <em>ⲡⲣⲉⲧⲁ</em> = præda «proie», <em>ⲃⲉⲣⲉⲧⲁⲣⲓⲟⲥ</em> = veredarius «courrier d'Etat».</p>
 			<p><b>V. Grammairiens anciens.</b> Au 11<sup>e</sup> siècle, on ne comprenait presque plus en Egypte l'ancienne langue nationale. C'est alors que les savants se mirent à composer des grammaires et des vocabulaires copte-arabes. Ils appelèrent la grammaire <i>préface</i> <em>مقدمة</em> et le vocabulaire <i>échelle</i> (scala) <em>سلم</em><sup class="footnote">1</sup>. Voici la liste des auteurs dont les noms et les ouvrages sont parvenus jusqu'à nous:</p>
+      <p><b>Amba Athanasios</b>, évêque de Qous <em>انبا اثناسيوس اسقف مدينة قوس</em> (11<sup>e</sup> siècle), auteur d'une grammaire copte-arabe pour les deux dialectes ṣaꜥìdique et boḥairique; elle a pour titre <em>قلادة التحرير في علم التفسير</em>.</p>
+      <p><b>Amba Yoḥanna</b>, évêque de Samaninoud <em>انبا يوحنا اسقف سمنود</em> (vers 1230), auteur: 1. d'une <i>préface</i> boḥairique, très répandue autrefois en Egypte; 2. d'un vocabulaire copte-arabe qui contient tous les mots des livres liturgiques, non dans l'ordre alphabétique, mais comme ils se présentent dans ces livres; c'est donc plutôt une sorte de version qu'un lexique. Ces deux ouvrages composés en boḥairique par l'auteur ont été adaptés au ṣaꜥìdique.</p>
+      <p class="footnote">1. Ces mots étaient déjà depuis longtemps employés par les Arabes à peu près dans le même sens.</p>
+      <p><b>Aboul-Farag ibn al-ꜥAssal</b> <em>ابو الفرج ابن العسال</em> auteur d'une <i>préface</i> boḥairique.</p>
+      <p><b>Abou Ishaq ibn al-ꜥAssal</b> <em>ابو اسحق ابن العسال</em> le frère du précédent, auteur d'un important vocabulaire intitulé <i>l'échelle rimée et l'or purifié</i> <em>السلم القفي والذهب المصفي</em>. Cette scala suit à la fois l'ordre alphabétique et l'ordre des rimes. Dans son introduction, l'auteur fait l'éloge de la scala d'Amba Yoḥanna de Samannoud, mais il trouve, et à bon droit, qu'elle est incommode et peu praticable. C'est pour remédier à cet inconvénient qu'il établit la sienne dans un ordre nouveau; d'ailleurs il se limite aussi aux livres liturgiques.</p>
+      <p>Ces deux écrivains sont du milieu du 13<sup>e</sup> siècle.</p>
+      <p><b>Ibn Katib Qaiṣar</b> <em>ابن كاتب قيصر</em> (1250), auteur d'une préface intitulée <i>la contemplation</i> <em>التبصرة</em>.</p>
+      <p><b>Al-Wagih al-Qalioubi <em>الوجيه القليوبي</em> (1250), auteur d'une <i>préface</i> qui a pour titre <i>la suffisance</i> <em>الكفاية</em>.</p>
+      <p><b>Ibn ad-Dohairi <em>ابن الدهيري</em> (1250), auteur d'une <i>préface</i> copte-arabe. Dans son introduction il dit qu'Abou Ishâq Ibn al-ꜥAssâl lui fit prendre connaissance de sa <i>scala rimée</i> et qu'il lui montra les <i>préfaces</i> d'Ibn Kâtib Qaiṣar et d'al-Qalioubi. Ibn ad-Dohairi n'eut pas de peine à reconnaître que ces deux derniers auteurs avaient pris pour base de leur travail la grammaire d'Amba Yoḥanna de Samannoud. C'est pour les compléter et les perfectionner qu'il composa lui-même une nouvelle <i>préface</i>.</p>
+      <p><b>Abou Chakir ibn ar-Raheb</b> <em>ابن شاكر ابن الراهب</em> diacre de l'Eglise de la Sainte Vierge d'al-Muꜥallaqa au Vieux-Caire, (vers 1260). On a de lui une longue <i>préface</i> copte-arabe.</p>
+      <p><b>Aboul-Barakat Chams ar-Ri'asat</b> <em>ابو البركات شمس الرئاسة المعروف بابن كبر</em> (vers 1300), auteur d'un grand vocabulaire copte-arabe intitulé <em>السلم المقترح</em> <i>l'échelle impromsée</i>.</p>
+      <p>De tous ces ouvrages, quatre ont été publiés par Kircher, <i>Lingua aegyptiaca restituta</i>; c'est la <i>préface</i> boḥairique d'Amba Yoḥanna de Samannoud, la <i>préface</i>, également boḥairique, d'Ibn Kâtib Qaiṣar, le vocabulaire d'Aboul-barakât Chams ar-Ri'âsat et celui d'Abou Ishâq ibn al-ꜥAssâl. Les autres sont inédits.</p>
 		</div>
+  <hr>
+<div>
+<h2>1. Phonétique.</h2>
+  <hr>
+  <h3>A. Alphabet.</h3>
+  <p>L'alphabet copte comprend les vingt-quatre lettres de l'alphabet grec, plus sept lettres égyptiennes.</p>
+  <table>
+    <tr>
+      <th>Forme</th><th>Nom</th><th>Valeur</th>
+    </tr>
+    <tr>
+      <td>Ⲁⲁ</td><td>alpha</td><td>a</td>
+    </tr>
+    <tr>
+      <td>Ⲃⲃ</td><td>vita</td><td>v</td>
+    </tr>
+    <tr>
+      <td>Ⲅⲅ</td><td>gamma</td><td>g <em>غ</em></td>
+    </tr>
+    <tr>
+      <td>Ⲇⲇ</td><td>delta</td><td>d</td>
+    </tr>
+    <tr>
+      <td>Ⲉⲉ</td><td>epsilon</td><td>é</td>
+    </tr>
+    <tr>
+      <td>Ⲍⲍ</td><td>zita</td><td>z</td>
+    </tr>
+    <tr>
+      <td>Ⲏⲏ</td><td>ita</td><td>i è</td>
+    </tr>
+    <tr>
+      <td>Ⲑⲑ</td><td>thita</td><td>th</td>
+    </tr>
+    <tr>
+      <td>Ⲓⲓ</td><td>iota</td><td>i</td>
+    </tr>
+    <tr>
+      <td>Ⲕⲕ</td><td>kappa</td><td>k</td>
+    </tr>
+    <tr>
+      <td>Ⲗⲗ</td><td>laoula</td><td>l</td>
+    </tr>
+    <tr>
+      <td>Ⲙⲙ</td><td>mi</td><td>m</td>
+    </tr>
+    <tr>
+      <td>Ⲛⲛ</td><td>ni</td><td>n</td>
+    </tr>
+    <tr>
+      <td>Ⲝⲝ</td><td>xi</td><td>x</td>
+    </tr>
+    <tr>
+      <td>Ⲟⲟ</td><td>omicron</td><td>o</td>
+    </tr>
+    <tr>
+      <td>Ⲡⲡ</td><td>pi</td><td>p</td>
+    </tr>
+    <tr>
+      <td>Ⲣⲣ</td><td>ro</td><td>r</td>
+    </tr>
+    <tr>
+      <td>Ⲥⲥ</td><td>sima</td><td>s</td>
+    </tr>
+    <tr>
+      <td>Ⲧⲧ</td><td>tau</td><td>t</td>
+    </tr>
+    <tr>
+      <td>Ⲩⲩ</td><td>ypsilon</td><td>y ou</td>
+    </tr>
+    <tr>
+      <td>Ⲫⲫ</td><td>phi</td><td>ph</td>
+    </tr>
+    <tr>
+      <td>Ⲭⲭ</td><td>chi</td><td>ch <em>χ</em></td>
+    </tr>
+    <tr>
+      <td>Ⲯⲯ</td><td>psi</td><td>ps</td>
+    </tr>
+    <tr>
+      <td>Ⲱⲱ</td><td>oméga</td><td>ô</td>
+    </tr>
+    <tr>
+      <td>Ϣϣ</td><td>schai</td><td>sch</td>
+    </tr>
+    <tr>
+      <td>Ϥϥ</td><td>fai</td><td>f</td>
+    </tr>
+    <tr>
+      <td>Ϧϧ</td><td>khai</td><td>kh <em>خ</em></td>
+    </tr>
+    <tr>
+      <td>Ϩϩ</td><td>hori</td><td>h</td>
+    </tr>
+    <tr>
+      <td>Ϫϫ</td><td>djendja</td><td>dj</td>
+    </tr>
+    <tr>
+      <td>Ϭϭ</td><td>tschima</td><td>sch</td>
+    </tr>
+    <tr>
+      <td>Ϯϯ</td><td>ti</td><td>ti</td>
+    </tr>
+  </table>
+  <p>Les sept dernières lettres sont des caractères démotiques qui dérivent eux-mêmes des hiéroglyphes:</p>
+  <table>
+    <tr>
+      <td><img src="" alt=""> = <img src="" alt=""> = <img src="" alt=""></td>
+    </tr>
+    <tr>
+      <td><img src="" alt=""> = <img src="" alt=""> = <img src="" alt=""></td>
+    </tr>
+    <tr>
+      <td><img src="" alt=""> = <img src="" alt=""> = <img src="" alt=""></td>
+    </tr>
+    <tr>
+      <td><img src="" alt=""> = <img src="" alt=""> = <img src="" alt=""></td>
+    </tr>
+    <tr>
+      <td><img src="" alt=""> = <img src="" alt=""> = <img src="" alt=""></td>
+    </tr>
+    <tr>
+      <td><img src="" alt=""> = <img src="" alt=""> = <img src="" alt=""></td>
+    </tr>
+    <tr>
+      <td><img src="" alt=""> = <img src="" alt=""> = <img src="" alt=""></td>
+    </tr>
+  </table>
+  <p>Les lettres <em>ⲅ</em> <em>ⲇ</em> <em>ⲍ</em> ne sont employées que dans les mots grecs<sup class="footnote">1</sup>. Lorsque <em>ⲝ</em> et <em>ⲯ</em> font partie d'un mot copte, ils sont une contraction de <em>ⲕⲥ</em>, <em>ⲡⲥ</em>: <em>ⲝⲟⲗⲥⲉⲗ</em> = <em>ⲕⲥⲟⲗⲥⲉⲗ</em>, <em>ⲯⲁⲓ</em> = <em>ⲡⲥⲁⲓ</em>.</p>
+  <p>Quelquefois aussi les lettres <em>ⲑ</em> <em>ⲫ</em> <em>ⲭ</em> remplacent <em>ⲧϩ</em>, <em>ⲡϩ</em>, <em>ⲕϩ</em> par ex. <em>ⲑⲉⲙⲥⲟ</em> = <em>ⲧϩⲉⲙⲥⲟ</em>. Mais généralement ce sont des lettres simples en boḥairique.</p>
+</div>
 	</body>
 </html>
