--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -658,6 +658,18 @@
   </table>
   <p>Les lettres <em>ⲅ</em> <em>ⲇ</em> <em>ⲍ</em> ne sont employées que dans les mots grecs<sup class="footnote">1</sup>. Lorsque <em>ⲝ</em> et <em>ⲯ</em> font partie d'un mot copte, ils sont une contraction de <em>ⲕⲥ</em>, <em>ⲡⲥ</em>: <em>ⲝⲟⲗⲥⲉⲗ</em> = <em>ⲕⲥⲟⲗⲥⲉⲗ</em>, <em>ⲯⲁⲓ</em> = <em>ⲡⲥⲁⲓ</em>.</p>
   <p>Quelquefois aussi les lettres <em>ⲑ</em> <em>ⲫ</em> <em>ⲭ</em> remplacent <em>ⲧϩ</em>, <em>ⲡϩ</em>, <em>ⲕϩ</em> par ex. <em>ⲑⲉⲙⲥⲟ</em> = <em>ⲧϩⲉⲙⲥⲟ</em>. Mais généralement ce sont des lettres simples en boḥairique.</p>
+  <p>Les lettres <em>ⲓ</em> et <em>ⲟⲩ</em> peuvent être de simples voyelles comme en arabe <em>ﹺ</em> et <em>ﹸ</em> ou bien les semi-consonnes y (<em>ي</em>), w (<em>و</em>). Dans ce dernier cas, on les appelle aussi, comme en arabe, lettres faibles.</p>
+  <h3>B. Valeur et Prononciation des Letters.</h3>
+  <h4>1. Consonnes.</h4>
+  <p>Les consonnes coptes peuvent se diviser en:</p>
+  <ol>
+    <li>Labiales <em>ⲃ</em> <em>ⲛ</em> <em>ⲫ</em> <em>ϥ</em>.</li>
+    <li>Dentales <em>ⲑ</em> <em>ⲧ</em>, <em>ϯ</em>; <em>ⲥ</em>.</li>
+    <li>Gutturales <em>ⲕ</em> <em>ⲭ</em>; <em>ϧ</em> <em>ϩ</em>.</li>
+    <li>Palatales <em>ϣ</em> <em>ϫ</em> <em>ϭ</em>.</li>
+    <li>Liquides <em>ⲗ</em> <em>ⲣ</em>; <em>ⲙ</em> <em>ⲛ</em>.</li>
+  </ol>
+  <p class="footnote">1. On peut citer comme exception <em>ⲁⲅⲱ</em> «perte», <i>Lév.</i> 5, 22. Mais cette orthographe est rare, le mot s'écrit plutôt <em>ⲁⲕⲱ</em>. Les Coptes ont confondu plusieurs fois <em>ⲅ</em> et <em>ⲕ</em>, cf. <em>ⲕⲉⲛⲉⲁ</em>, <i>Nomb.</i> 15, 14, pour <em>ⲅⲉⲛⲉⲁ</em>; <em>ⲕⲁⲗⲏ</em> <i>Lév.</i> 11, 28, pour <em>ⲅⲁⲗⲏ</em>. AB. 100.</p>
 </div>
 	</body>
 </html>
