--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -539,97 +539,97 @@
       <th>Forme</th><th>Nom</th><th>Valeur</th>
     </tr>
     <tr>
-      <td>Ⲁⲁ</td><td>alpha</td><td>a</td>
+      <td><em>Ⲁ</em><em>ⲁ</em></td><td>alpha</td><td>a</td>
     </tr>
     <tr>
-      <td>Ⲃⲃ</td><td>vita</td><td>v</td>
+      <td><em>Ⲃ</em><em>ⲃ</em></td><td>vita</td><td>v</td>
     </tr>
     <tr>
-      <td>Ⲅⲅ</td><td>gamma</td><td>g <em>غ</em></td>
+      <td><em>Ⲅ</em><em>ⲅ</em></td><td>gamma</td><td>g <em>غ</em></td>
     </tr>
     <tr>
-      <td>Ⲇⲇ</td><td>delta</td><td>d</td>
+      <td><em>Ⲇ</em><em>ⲇ</em></td><td>delta</td><td>d</td>
     </tr>
     <tr>
-      <td>Ⲉⲉ</td><td>epsilon</td><td>é</td>
+      <td><em>Ⲉ</em><em>ⲉ</em></td><td>epsilon</td><td>é</td>
     </tr>
     <tr>
-      <td>Ⲍⲍ</td><td>zita</td><td>z</td>
+      <td><em>Ⲍ</em><em>ⲍ</em></td><td>zita</td><td>z</td>
     </tr>
     <tr>
-      <td>Ⲏⲏ</td><td>ita</td><td>i è</td>
+      <td><em>Ⲏ</em><em>ⲏ</em></td><td>ita</td><td>i è</td>
     </tr>
     <tr>
-      <td>Ⲑⲑ</td><td>thita</td><td>th</td>
+      <td><em>Ⲑ</em><em>ⲑ</em></td><td>thita</td><td>th</td>
     </tr>
     <tr>
-      <td>Ⲓⲓ</td><td>iota</td><td>i</td>
+      <td><em>Ⲓ</em><em>ⲓ</em></td><td>iota</td><td>i</td>
     </tr>
     <tr>
-      <td>Ⲕⲕ</td><td>kappa</td><td>k</td>
+      <td><em>Ⲕ</em><em>ⲕ</em></td><td>kappa</td><td>k</td>
     </tr>
     <tr>
-      <td>Ⲗⲗ</td><td>laoula</td><td>l</td>
+      <td><em>Ⲗ</em><em>ⲗ</em></td><td>laoula</td><td>l</td>
     </tr>
     <tr>
-      <td>Ⲙⲙ</td><td>mi</td><td>m</td>
+      <td><em>Ⲙ</em><em>ⲙ</em></td><td>mi</td><td>m</td>
     </tr>
     <tr>
-      <td>Ⲛⲛ</td><td>ni</td><td>n</td>
+      <td><em>Ⲛ</em><em>ⲛ</em></td><td>ni</td><td>n</td>
     </tr>
     <tr>
-      <td>Ⲝⲝ</td><td>xi</td><td>x</td>
+      <td><em>Ⲝ</em><em>ⲝ</em></td><td>xi</td><td>x</td>
     </tr>
     <tr>
-      <td>Ⲟⲟ</td><td>omicron</td><td>o</td>
+      <td><em>Ⲟ</em><em>ⲟ</em></td><td>omicron</td><td>o</td>
     </tr>
     <tr>
-      <td>Ⲡⲡ</td><td>pi</td><td>p</td>
+      <td><em>Ⲡ</em><em>ⲡ</em></td><td>pi</td><td>p</td>
     </tr>
     <tr>
-      <td>Ⲣⲣ</td><td>ro</td><td>r</td>
+      <td><em>Ⲣ</em><em>ⲣ</em></td><td>ro</td><td>r</td>
     </tr>
     <tr>
-      <td>Ⲥⲥ</td><td>sima</td><td>s</td>
+      <td><em>Ⲥ</em><em>ⲥ</em></td><td>sima</td><td>s</td>
     </tr>
     <tr>
-      <td>Ⲧⲧ</td><td>tau</td><td>t</td>
+      <td><em>Ⲧ</em><em>ⲧ</em></td><td>tau</td><td>t</td>
     </tr>
     <tr>
-      <td>Ⲩⲩ</td><td>ypsilon</td><td>y ou</td>
+      <td><em>Ⲩ</em><em>ⲩ</em></td><td>ypsilon</td><td>y ou</td>
     </tr>
     <tr>
-      <td>Ⲫⲫ</td><td>phi</td><td>ph</td>
+      <td><em>Ⲫ</em><em>ⲫ</em></td><td>phi</td><td>ph</td>
     </tr>
     <tr>
-      <td>Ⲭⲭ</td><td>chi</td><td>ch <em>χ</em></td>
+      <td><em>Ⲭ</em><em>ⲭ</em></td><td>chi</td><td>ch <em>χ</em></td>
     </tr>
     <tr>
-      <td>Ⲯⲯ</td><td>psi</td><td>ps</td>
+      <td><em>Ⲯ</em><em>ⲯ</em></td><td>psi</td><td>ps</td>
     </tr>
     <tr>
-      <td>Ⲱⲱ</td><td>oméga</td><td>ô</td>
+      <td><em>Ⲱ</em><em>ⲱ</em></td><td>oméga</td><td>ô</td>
     </tr>
     <tr>
-      <td>Ϣϣ</td><td>schai</td><td>sch</td>
+      <td><em>Ϣ</em><em>ϣ</em></td><td>schai</td><td>sch</td>
     </tr>
     <tr>
-      <td>Ϥϥ</td><td>fai</td><td>f</td>
+      <td><em>Ϥ</em><em>ϥ</em></td><td>fai</td><td>f</td>
     </tr>
     <tr>
-      <td>Ϧϧ</td><td>khai</td><td>kh <em>خ</em></td>
+      <td><em>Ϧ</em><em>ϧ</em></td><td>khai</td><td>kh <em>خ</em></td>
     </tr>
     <tr>
-      <td>Ϩϩ</td><td>hori</td><td>h</td>
+      <td><em>Ϩ</em><em>ϩ</em></td><td>hori</td><td>h</td>
     </tr>
     <tr>
-      <td>Ϫϫ</td><td>djendja</td><td>dj</td>
+      <td><em>Ϫ</em><em>ϫ</em></td><td>djendja</td><td>dj</td>
     </tr>
     <tr>
-      <td>Ϭϭ</td><td>tschima</td><td>sch</td>
+      <td><em>Ϭ</em><em>ϭ</em></td><td>tschima</td><td>sch</td>
     </tr>
     <tr>
-      <td>Ϯϯ</td><td>ti</td><td>ti</td>
+      <td><em>Ϯ</em><em>ϯ</em></td><td>ti</td><td>ti</td>
     </tr>
   </table>
   <p>Les sept dernières lettres sont des caractères démotiques qui dérivent eux-mêmes des hiéroglyphes:</p>
@@ -670,6 +670,10 @@
     <li>Liquides <em>ⲗ</em> <em>ⲣ</em>; <em>ⲙ</em> <em>ⲛ</em>.</li>
   </ol>
   <p class="footnote">1. On peut citer comme exception <em>ⲁⲅⲱ</em> «perte», <i>Lév.</i> 5, 22. Mais cette orthographe est rare, le mot s'écrit plutôt <em>ⲁⲕⲱ</em>. Les Coptes ont confondu plusieurs fois <em>ⲅ</em> et <em>ⲕ</em>, cf. <em>ⲕⲉⲛⲉⲁ</em>, <i>Nomb.</i> 15, 14, pour <em>ⲅⲉⲛⲉⲁ</em>; <em>ⲕⲁⲗⲏ</em> <i>Lév.</i> 11, 28, pour <em>ⲅⲁⲗⲏ</em>. AB. 100.</p>
+  <p>Les consonnes aspirables sont:</p>
+  <p>Fortes <em>ⲡ</em> <em>ⲕ</em> <em>ⲧ</em>; aspirées <em>ⲫ</em> <em>ⲭ</em> <em>ⲑ</em>.</p>
+  <p><b>1. Labiales.</b> <em>ⲃ</em> se prononce actuellement <i>v</i>; les Coptes le prononcent parfois <em>ⲟⲩ</em> et c'est pour cette raison que <em>ⲃ</em> remplace <em>ⲟⲩ</em> dans plusieurs mots. Ainsi <em>ⲟⲩⲟⲛ ⲛⲓⲃⲉⲛ</em> s'écrit aussi <em>ⲃⲟⲛ ⲛⲓⲃⲉⲛ</em>.</p>
+  <p>On ne met aucune différence de prononciation entre <em>ⲫ</em> et <em>ϥ</em>.</p>
 </div>
 	</body>
 </html>
