--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -674,6 +674,46 @@
   <p>Fortes <em>ⲡ</em> <em>ⲕ</em> <em>ⲧ</em>; aspirées <em>ⲫ</em> <em>ⲭ</em> <em>ⲑ</em>.</p>
   <p><b>1. Labiales.</b> <em>ⲃ</em> se prononce actuellement <i>v</i>; les Coptes le prononcent parfois <em>ⲟⲩ</em> et c'est pour cette raison que <em>ⲃ</em> remplace <em>ⲟⲩ</em> dans plusieurs mots. Ainsi <em>ⲟⲩⲟⲛ ⲛⲓⲃⲉⲛ</em> s'écrit aussi <em>ⲃⲟⲛ ⲛⲓⲃⲉⲛ</em>.</p>
   <p>On ne met aucune différence de prononciation entre <em>ⲫ</em> et <em>ϥ</em>.</p>
+  <p><b>2. Dentales.</b> <em>ⲧ</em> remplace le <i>d</i> fort des quelques mots latins employés en copte.</p>
+  <p>Ex: <em>ⲡⲣⲉⲧⲁ</em> = præda; <em>ⲃⲉⲣⲉⲧⲁⲣⲓⲟⲥ</em> = veredarius.</p>
+  <p>Le Coptes de la Haute-Egypte donnent au <em>ⲧ</em> le son <i>d</i>.</p>
+  <p><em>ϯ</em> se prononce toujours <i>ti</i> (<i>di</i> en Haute-Egypte) et lorsque <em>ⲧ</em> est suivi de <em>ⲓ</em> on écrit parfois <em>ϯ</em> pour <em>ⲧⲓ</em>. Ex: <em>ϯⲙⲏ</em> = <em>ⲧⲓⲙⲏ</em> «prix».</p>
+  <p><em>ⲑ</em> prononce à la manière du grec moderne.</p>
+  <p><em>ⲥ</em> a toujours le son doux <i>s</i>.</p>
+  <p><b>3. Gutturales.</b> <em>ⲭ</em> se prononce <i>sch</i> dans quelques mots, par ex. <em>ⲭⲉⲣⲟⲩⲃⲓⲙ</em>; de là vient peut-être la graphie <em>ⲙⲉⲭⲓⲣ</em> du mot <em>ⲙⲉϣⲓⲣ</em>.</p>
+  <p><em>ⲕ</em> est toujours fort.</p>
+  <p><em>ϧ</em> a exactement la valeur du <em>خ</em> arabe; <em>ϩ</em>, celle du <em>ه</em>.</p>
+  <p><b>4. Palatales.</b> Actuellement, les Coptes ne mettent aucune différence de prononciation entre <em>ϣ</em> et <em>ϭ</em>; aussi ces deux lettres sont-elles souvent écrites l'une pour l'autre.</p>
+  <p>Il est probable que <em>ϭ</em> se prononçait autrefois <i>tsch</i>. Quelques auteurs lui attribuent la valeur <i>g</i> dur.</p>
+  <p><em>ϫ</em> = <i>dj</i>; cependant quelques Coptes le traitent comme <em>ج</em> arabe et le prononcent <i>g</i> dur.</p>
+  <p>Les liquides ont en copte la valeur habituelle.</p>
+  <h4>2. Voyelles et Diphtongues.</h4>
+  <p>Il y a en copte sept voyelles:</p>
+  <p>trois brèves: <em>ⲁ</em> <em>ⲉ</em> <em>ⲟ</em></p>
+  <p>trois longues: <em>ⲏ</em> <em>ⲱ</em> <em>ⲟⲩ</em></p>
+  <p>et une qui peut être longue ou brève <em>ⲓ</em>.</p>
+  <p>Généralement <em>ⲓ</em> est bref à la fin des mots (S. <em>ⲉ</em>) et long à l'intérieur: <em>ϣⲏⲣⲓ</em> (S. <em>ϣⲏⲣⲉ</em>); <em>ⲙⲓⲥⲓ</em> (S. <em>ⲙⲓⲥⲉ</em>).</p>
+  <p>Aujourd'hui <em>ⲏ</em> se prononce tantôt <i>è</i> comme dans <em>ϣⲫⲏⲣ</em> = <i>schphèr</i>, tantôt <i>i</i>: <em>ϣⲗⲏⲗ</em> = <i>schlil</i>; <em>ⲱ</em> a la valeur de <i>ô</i>: <em>ϩⲱⲃ</em> «chose», <em>ⲣⲱⲙⲓ</em> «homme»; <em>ⲟ</em> a celle de <i>o</i>: <em>ⲥⲟⲛ</em> «frère», <em>ⲥⲟⲛⲓ</em> «voleur».</p>
+  <p>Pour les voyelles dans les mots, voir 13–21.</p>
+  <p>Le copte a 8 diphtongues dont 6 sont terminées par <em>ⲓ</em> et 2 par <em>ⲩ</em>: <em>ⲁⲓ</em> <em>ⲉⲓ</em> <em>ⲏⲓ</em> <em>ⲟⲓ</em> <em>ⲱⲓ</em> <em>ⲟⲩⲓ</em>; <em>ⲁⲩ</em> <em>ⲉⲩ</em>.</p>
+  <p><em>ϣⲁⲓ</em> fête,</p>
+  <p><em>ⲉⲣⲫⲉⲓ</em> temple,</p>
+  <p><em>ⲙⲏⲓⲣⲓ</em> faisceau,</p>
+  <p><em>ⲕⲟⲓ</em> champ,</p>
+  <p><em>ⲉϫⲱⲓ</em> sur moi,</p>
+  <p><em>ⲧⲟⲟⲩⲓ</em> matin,</p>
+  <p><em>ϭⲁⲗⲁⲩϫ</em> pieds,</p>
+  <p><em>ⲙⲉⲩⲓ</em> pensée.</p>
+  <p>Dans toutes ces diphtongues, le second élément <em>ⲓ</em> <em>ⲩ</em> est une semi-consonne y (<em>ي</em>), w (<em>و</em>).</p>
+  <p>Les groupes <em>ⲏⲟⲩ</em> <em>ⲟⲟⲩ</em> <em>ⲱⲟⲩ</em> <em>ⲟⲩⲟⲩ</em> <em>ⲓⲟⲩ</em> doivent être considérés comme formant deux syllabes plutôt qu'une diphtongue: <em>ⲧⲟⲩⲃⲏⲟⲩⲧ</em> «purifié», <em>ⲉϩⲟⲟⲩ</em> «jour», <em>ⲱⲟⲩ</em> «gloire», <em>ⲛⲟⲩⲟⲩ</em> «les leurs», <em>ⲥⲓⲟⲩ</em> «étoile».</p>
+  <p>Les Coptes ont toujours prononcé les mots grecs introduits dans leur langue suivant la prononciation dite <i>romaïque</i> ou <i>moderne</i>.</p>
+  <p>Cette prononciation a étendu son influence jusque sur l'orthographe: on a écrit comme on prononçait; la plupart des diphtongues ont disparu et ont été remplacées par des voyelles simples.</p>
+  <p>En conséquence de ce principe:</p>
+  <p><em>ⲁⲓ</em> se prononce et s'écrit <em>ⲉ</em>, par ex. <em>ⲕⲉ</em> pour <em>ⲕⲁⲓ</em>, <em>ⲇⲓⲕⲉⲟⲥ</em> pour <em>ⲇⲓⲕⲁⲓⲟⲥ</em> et tous les infinitifs passifs: <em>ⲭⲁⲣⲓⲍⲉⲥⲑⲉ</em> pour <em>ⲭⲁⲣⲓⲍⲉⲥⲑⲁⲓ</em>.</p>
+  <p><em>ⲉⲓ</em> se prononce et s'écrit souvent <em>ⲓ</em>, par ex. tous les infinitifs actifs: <em>ⲁⲅⲓⲁⲍⲓⲛ</em> pour <em>ⲁⲅⲓⲁⲍⲉⲓⲛ</em>.</p>
+  <p><em>ⲏ</em> et <em>ⲟⲓ</em> se prononcent aussi <em>ⲓ</em>. Il y a donc cinq manières différentes de représenter le son <i>i</i>: <em>ⲉⲓ</em> <em>ⲟⲓ</em> <em>ⲏ</em> <em>ⲓ</em> <em>ⲩ</em>, d'où il est résulté l'inconvénient que ces lettres ont été souvent remplacées les unes par les autres dans l'écriture.</p>
+  <p>Au commencement des mots grecs, les voyelles, qu'elles aient l'esprit doux ou l'esprit rude, prennent souvent l'aspirée douce <em>ϩ</em>. Ceci a lieu surtout pour la voyelle <i>i</i>, de quelque manière qu'elle soit écrite: <em>ϩⲓⲛⲁ</em> = <em>ἵνα</em>, <em>ϩⲓⲣⲏⲛⲏ</em> = <em>εἰρήνη</em>.</p>
+  <h3>C. Des Syllabes.</h3>
 </div>
 	</body>
 </html>
